samples/_failures_safe/1761130445_0ccdc1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f63d23b8.c: In function ‘main’:
./samples/SAFE/__tmp_f63d23b8.c:150:5: error: expected expression at end of input
  150 |     process_log_data(entries,
      |     ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_f63d23b8.c:150:5: error: expected declaration or statement at end of input
